--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --port 4200",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.21.1",
+    "@fontsource/ibm-plex-serif": "^5.0.12",
     "astro": "^4.3.5",
     "sharp": "^0.32.5"
   }
